<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_perfil"
            android:title="@string/perfil" />
            <!--android:icon="@drawable/icon_pagamentos"-->

        <item
            android:id="@+id/item_itens"
            android:title="@string/itens" />
            <!--android:icon="@drawable/icon_depositos"-->

        <item
            android:id="@+id/item_leiloes"
            android:title="@string/leiloes" />
            <!--android:icon="@drawable/icon_despesas"-->

        <item
            android:id="@+id/item_sair"
            android:title="@string/sair" />
        <!--    android:icon="@drawable/icon_caixa"-->

    </group>
<!--
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>
-->
</menu>