<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.visantanna.leilaoapp.View.LoginActivity"
    >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp"
        android:theme="@style/AppTheme"
        android:focusableInTouchMode="true"
        >

        <TextView android:id = "@+id/txNomeApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingTop="40dp"
            android:text= "@string/app_name"
            android:textSize="30dp"
            />

        <ImageView
            android:id = "@+id/logo"
            android:src = "@drawable/icon_app"
            android:layout_centerHorizontal="true"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@id/txNomeApp"
            android:layout_marginTop="30dp"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email"
            android:layout_width="400dp"
            android:layout_height="100dp"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="40dp"
            app:hintTextAppearance="@style/TextAppearanceDefault">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/emailTextBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="text"

                />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/mensagem"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/email"
            android:layout_centerHorizontal="true"
            android:paddingTop="5dp"
            android:textColor="@color/colorAccent"
            android:textSize="20dp" />
        <android.support.design.widget.TextInputLayout
            android:id = "@+id/senha"
            android:layout_width = "400dp"
            android:layout_height="100dp"
            android:layout_below="@id/email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="8dp"
            app:hintTextAppearance="@style/TextAppearanceDefault">
            <android.support.v7.widget.AppCompatEditText
                android:id = "@+id/senhaTextBox"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:hint = "@string/senha"
            />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/logIn"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_below="@id/senha"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:onClick="logInClicked"
            android:text="@string/LogIn"
            android:theme="@style/strButton" />

        <TextView
            android:id="@+id/CriarConta"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="false"
            android:layout_below="@id/logIn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="37dp"
            android:clickable="true"
            android:contextClickable="false"
            android:onClick="createAccount"
            android:text="@string/NaoTemConta"
            android:textColor="@color/primaryTextColor"
            android:textColorHighlight="@color/lightPrimaryColor"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/CriarContaInst"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/CriarConta"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="40dp"
            android:clickable="true"
            android:onClick="createAccountInstituicao"
            android:text="@string/CriarContaInst"
            android:textColor="@color/primaryTextColor"
            android:textColorHighlight="@color/lightPrimaryColor"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/EsqueceuSenha"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/CriarContaInst"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:clickable="true"
            android:onClick="esqueciSenha"
            android:text="@string/EsqueceuSenha"
            android:textColor="@color/primaryTextColor"
            android:textColorHighlight="@color/lightPrimaryColor"
            android:textSize="14sp"
            tools:clickable="true" />


    </RelativeLayout>
</ScrollView>